--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,70 @@
 ---
+import { getCollection } from "astro:content";
+import RootLayout from "@/layouts/RootLayout.astro";
+import { compareDesc } from "date-fns";
+import PostRow from "@/components/PostRow.astro";
+import ProjectCard from "@/components/ProjectCard.astro";
+
+const allPosts = await getCollection("posts");
+const recentPosts = allPosts
+  .sort((a, b) => compareDesc(a.data.publishDate, b.data.publishDate))
+  .slice(0, 5);
+const allProjects = await getCollection("projects");
+const featuredProjects = allProjects.filter((project) =>
+  ["inspirly", "fantasy-ai"].includes(project.slug)
+);
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<RootLayout>
+  <main class="container lg:max-w-screen-md mx-auto px-4 my-16">
+    <section class="my-16 prose dark:prose-invert prose-zinc">
+      <p class="text-2xl font-medium text-zinc-600 dark:text-zinc-400 mb-1">
+        Hi 👋
+      </p>
+      <h1>I'm Rohid</h1>
+      <p>
+        I'm a self-thought developer and founder <a href="https://inspirly.app"
+          >Inspirly</a
+        >. I'm currently building Inspired in public and also doing <a
+          href="https://youtube.com/@rohiddev">YouTube</a
+        > occasionally.
+      </p>
+    </section>
+    <section id="featured-project" class="my-16">
+      <div class="mb-4 flex items-center">
+        <h2
+          class="text-2xl font-medium text-zinc-600 dark:text-zinc-400 flex-1"
+        >
+          Featured Projects
+        </h2>
+        <a href="/projects">See all</a>
+      </div>
+      <div class="grid md:grid-cols-2 gap-8">
+        {featuredProjects.map((item) => <ProjectCard data={item} />)}
+      </div>
+    </section>
+    <section id="recent-posts" class="my-16">
+      <div class="mb-4 flex items-center">
+        <h2
+          class="text-2xl font-medium text-zinc-600 dark:text-zinc-400 flex-1"
+        >
+          Recent Posts
+        </h2>
+        <a href="/posts">See all</a>
+      </div>
+      <div>
+        {
+          recentPosts.map((post) => (
+            <PostRow
+              title={post.data.title}
+              description={post.data.description}
+              date={post.data.publishDate}
+              slug={post.slug}
+              thumbnail={post.data.coverImage}
+            />
+          ))
+        }
+      </div>
+    </section>
+  </main>
+</RootLayout>
