--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,5 +1,5 @@
 ---
-import Image from "astro/components/Image.astro";
+import { Image } from "astro:assets";
 import type { CollectionEntry } from "astro:content";
 
 type Props = {
@@ -11,16 +11,16 @@ const { data } = Astro.props;
 
 <article class="relative">
   <Image
-    format="webp"
     src={data.data.coverImage}
     alt={data.data.name}
     class="w-full object-cover aspect-video rounded-lg"
-    width={352}
-    height={198}
+    width={512}
   />
   <h3 class="text-xl font-bold mt-4">{data.data.name}</h3>
   <p class="text-zinc-600 dark:text-zinc-400 mt-1">
     {data.data.description}
   </p>
-  <a href={`/projects/${data.slug}`} class="absolute inset-0"></a>
+  <a href={`/projects/${data.slug}`} class="absolute inset-0 opacity-0">
+    {data.data.name}
+  </a>
 </article>
