--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,9 @@
     class="container mx-auto lg:max-w-screen-md px-4 py-6 items-center flex text-center justify-center"
   >
     <p class="text-zinc-600 dark:text-zinc-400 text-center">
-      © 2023 <a href="/" class="hover:underline font-medium">rohid.dev</a>
+      © 2023 <a href="https://rohid.dev" class="hover:underline font-medium"
+        >rohid.dev</a
+      >
       • Powered by <a
         href="https://astro.build"
         target="_blank"
@@ -13,6 +15,11 @@
         href="https://vercel.com"
         target="_blank"
         class="hover:underline font-medium">Vercel</a
+      >
+      • <a
+        href="https://github/iam-rohid/rohid-dev"
+        target="_blank"
+        class="hover:underline font-medium">Source Code</a
       >
     </p>
   </div>
