--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,6 +11,7 @@ import Image from "astro/components/Image.astro";
       <nav
         class="flex gap-6 max-lg:container max-lg:mx-auto max-w-screen-md px-4 h-12 items-center"
       >
+        <a href="/" class="lg:hidden">Home</a>
         <a href="/posts">Posts</a>
         <a href="/projects">Projects</a>
         <a href="/about">About</a>
