--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -19,12 +19,24 @@ const {
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <meta name="description" content={description} />
     <meta name="keywords" content={keywords.join(",")} />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-N165NS4LRX"
+    ></script>
+    <script is:inline>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-N165NS4LRX");
+    </script>
   </head>
   <body class="bg-white dark:bg-zinc-900 text-zinc-800 dark:text-zinc-100">
     <Header />
