source code url fix

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,7 +17,7 @@
         class="hover:underline font-medium">Vercel</a
       >
       • <a
-        href="https://github/iam-rohid/rohid-dev"
+        href="https://github.com/iam-rohid/rohid-dev"
         target="_blank"
         class="hover:underline font-medium">Source Code</a
       >
