dark scrollbar on dark mode

--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -46,7 +46,9 @@ const {
 </html>
 
 <style is:global>
-  .dark {
-    color-scheme: dark;
+  @media (prefers-color-scheme: dark) {
+    html {
+      color-scheme: dark;
+    }
   }
 </style>
