--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -15,6 +15,7 @@ const { data } = Astro.props;
     alt={data.data.name}
     class="w-full object-cover aspect-video rounded-lg"
     width={512}
+    height={320}
   />
   <h3 class="text-xl font-bold mt-4">{data.data.name}</h3>
   <p class="text-zinc-600 dark:text-zinc-400 mt-1">
