--- a/src/pages/keystatic/[...params].astro
+++ b/src/pages/keystatic/[...params].astro
@@ -1,5 +1,5 @@
 ---
-import { KeystaticPage } from "@/components/KeystaticPage";
+import { KeystaticPage } from "../../../keystatic.page";
 
 export const prerender = false;
 ---
