--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -40,6 +40,7 @@ const { Content } = await render();
               alt={title}
               class="w-full my-4 object-cover aspect-video"
               width={800}
+              heihgt={600}
             />
           )
         }
