--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -37,6 +37,7 @@ const { Content } = await render();
           alt={name}
           class="w-full my-4 object-cover aspect-video"
           width={800}
+          heihgt={600}
         />
         <div class="flex gap-4 flex-wrap">
           {
