--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -7,18 +7,13 @@ const allProjects = await getCollection("projects");
 ---
 
 <RootLayout title="Projects">
-  <main class="container lg:max-w-screen-md mx-auto px-4 my-16">
-    <section id="all-projects">
-      <div class="mb-4 flex items-center">
-        <h2
-          class="text-2xl font-medium text-zinc-600 dark:text-zinc-400 flex-1"
-        >
-          All Projects
-        </h2>
-      </div>
-      <div class="grid md:grid-cols-2 gap-8">
-        {allProjects.map((project) => <ProjectCard data={project} />)}
-      </div>
-    </section>
+  <main
+    class="container lg:max-w-screen-lg mx-auto w-full px-4 md:py-16 md:space-y-16 py-8 space-y-8"
+  >
+    <h2 class="text-4xl font-bold text-zinc-600 dark:text-zinc-100">
+      Projects
+    </h2>
+
+    {allProjects.map((project) => <ProjectCard data={project} />)}
   </main>
 </RootLayout>
