PostSearch in individual post

--- a/src/components/PostRow.astro
+++ b/src/components/PostRow.astro
@@ -20,7 +20,7 @@ const {
       {description}
     </p>
     <p class="text-zinc-600 dark:text-zinc-400 my-1">
-      {format(new Date(publishDate), "MMM dd, yyy")}
+      {format(new Date(publishDate), "MMMM dd, yyy")}
     </p>
   </div>
   {
