--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -3,6 +3,7 @@ import { getCollection } from "astro:content";
 import RootLayout from "@/layouts/RootLayout.astro";
 import { compareDesc } from "date-fns";
 import PostRow from "@/components/PostRow.astro";
+import PostSearchBar from "@/components/PostSearchBar.astro";
 
 const query = Astro.url.searchParams.get("query");
 
@@ -17,47 +18,23 @@ if (query) {
 allPosts = allPosts.sort((a, b) =>
   compareDesc(new Date(a.data.publishDate), new Date(b.data.publishDate))
 );
+
+const pageTitle = query ? `Search "${query}"` : "Posts";
 ---
 
-<RootLayout title="Posts">
+<RootLayout title={pageTitle}>
   <main
-    class="container lg:max-w-screen-lg mx-auto w-full px-4 md:py-16 md:space-y-16 py-8 space-y-8"
+    class="container lg:max-w-screen-lg mx-auto w-full px-4 lg:py-16 lg:space-y-16 py-8 space-y-8"
   >
     <h2 class="text-4xl font-bold text-zinc-600 dark:text-zinc-100">
-      {query ? `Search: ${query}` : "Posts"}
+      {pageTitle}
     </h2>
     <div class="flex items-start gap-8">
       <div class="flex-1">
         {allPosts.map((post) => <PostRow data={post} />)}
       </div>
-      <div class="w-64">
-        <form>
-          <fieldset class="relative">
-            <input
-              type="search"
-              name="query"
-              value={query}
-              placeholder="Search post titles..."
-              class="bg-transparent w-full pr-4 pl-10 h-10 rounded-md border border-zinc-200 dark:border-zinc-800"
-            />
-            <svg
-              width="512"
-              height="512"
-              viewBox="0 0 24 24"
-              xmlns="http://www.w3.org/2000/svg"
-              class="w-5 h-5 absolute top-1/2 -translate-y-1/2 left-3 pointer-events-none text-zinc-600 dark:text-zinc-400"
-            >
-              <path
-                fill="none"
-                stroke="currentColor"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="m21 21l-4.343-4.343m0 0A8 8 0 1 0 5.343 5.343a8 8 0 0 0 11.314 11.314Z"
-              ></path>
-            </svg>
-          </fieldset>
-        </form>
+      <div class="w-64 max-lg:hidden">
+        <PostSearchBar />
       </div>
     </div>
   </main>
