--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -3,7 +3,16 @@ import ProjectCard from "@/components/ProjectCard.astro";
 import RootLayout from "@/layouts/RootLayout.astro";
 import { getCollection } from "astro:content";
 
-const allProjects = await getCollection("projects");
+let projects = await getCollection("projects");
+projects = projects.sort((a, b) => {
+  console.log([a.slug, a.data.weight]);
+  if ((a.data.weight || 0) > (b.data.weight || 0)) {
+    return -1;
+  } else if ((a.data.weight || 0) < (b.data.weight || 0)) {
+    return 1;
+  }
+  return 0;
+});
 ---
 
 <RootLayout title="Projects">
@@ -15,7 +24,7 @@ const allProjects = await getCollection("projects");
     </h2>
 
     <div>
-      {allProjects.map((project) => <ProjectCard data={project} />)}
+      {projects.map((project) => <ProjectCard data={project} />)}
     </div>
   </main>
 </RootLayout>
