--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,26 +1,18 @@
 <footer class="border-t border-zinc-100 dark:border-zinc-800">
   <div
-    class="container mx-auto lg:max-w-screen-md px-4 py-6 items-center flex text-center justify-center"
+    class="container mx-auto flex items-center justify-between px-4 py-6 text-center lg:max-w-screen-lg"
   >
-    <p class="text-zinc-600 dark:text-zinc-400 text-center">
-      © 2023 <a href="https://rohid.dev" class="hover:underline font-medium"
-        >rohid.dev</a
-      >
-      • Powered by <a
-        href="https://astro.build"
-        target="_blank"
-        class="hover:underline font-medium">Astro</a
-      >
-      • Hosted on <a
-        href="https://vercel.com"
-        target="_blank"
-        class="hover:underline font-medium">Vercel</a
-      >
-      • <a
-        href="https://github.com/iam-rohid/rohid-dev"
-        target="_blank"
-        class="hover:underline font-medium">Source Code</a
-      >
+    <p class="text-sm text-zinc-600 dark:text-zinc-300">
+      Rohidul Islam (<a
+        href="https://twitter.com/rohiddev"
+        class="underline-offset-4 hover:text-zinc-950 hover:underline dark:hover:text-zinc-50"
+        >@rohiddev</a
+      >)
     </p>
+    <a
+      href="https://github.com/iam-rohid/rohid-dev"
+      class="text-sm text-zinc-600 underline-offset-4 hover:text-zinc-950 hover:underline dark:text-zinc-300 dark:hover:text-zinc-50"
+      >Source</a
+    >
   </div>
 </footer>
