--- a/src/components/PostSearchBar.astro
+++ b/src/components/PostSearchBar.astro
@@ -9,14 +9,14 @@ const query = Astro.url.searchParams.get("query");
       name="query"
       value={query}
       placeholder="Search post titles..."
-      class="bg-transparent w-full pr-4 pl-10 h-10 rounded-md border border-zinc-200 dark:border-zinc-800"
+      class="h-10 w-full rounded-md border border-zinc-200 bg-transparent pl-10 pr-4 dark:border-zinc-800"
     />
     <svg
       width="512"
       height="512"
       viewBox="0 0 24 24"
       xmlns="http://www.w3.org/2000/svg"
-      class="w-5 h-5 absolute top-1/2 -translate-y-1/2 left-3 pointer-events-none text-zinc-600 dark:text-zinc-400"
+      class="pointer-events-none absolute left-3 top-1/2 h-5 w-5 -translate-y-1/2 text-zinc-600 dark:text-zinc-400"
     >
       <path
         fill="none"
