--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,15 +13,15 @@ const recentPosts = allPosts
 ---
 
 <RootLayout>
-  <main class="container lg:max-w-screen-md mx-auto px-4 my-16">
+  <main class="container mx-auto my-16 px-4 lg:max-w-screen-md">
     <section class="my-16">
       <p
-        class="text-2xl md:text-3xl font-medium text-zinc-600 dark:text-zinc-400 mb-1"
+        class="mb-1 text-2xl font-medium text-zinc-600 dark:text-zinc-400 md:text-3xl"
       >
         Hi 👋
       </p>
-      <h1 class="text-4xl md:text-5xl font-bold mb-8 mt-4">I'm Rohid</h1>
-      <div class="prose dark:prose-invert lg:prose-lg prose-zinc max-w-none">
+      <h1 class="mb-8 mt-4 text-4xl font-bold md:text-5xl">I'm Rohid</h1>
+      <div class="prose prose-zinc max-w-none dark:prose-invert lg:prose-lg">
         <p>
           I'm a self-thought developer. I'm currently building <a
             href="https://inspirly.app"
