--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -17,7 +17,7 @@ projects = projects.sort((a, b) => {
 
 <RootLayout title="Projects">
   <main
-    class="container lg:max-w-screen-lg mx-auto w-full px-4 lg:py-16 lg:space-y-16 py-8 space-y-8"
+    class="container mx-auto w-full space-y-8 px-4 py-8 lg:max-w-screen-lg lg:space-y-16 lg:py-16"
   >
     <h2 class="text-4xl font-bold text-zinc-600 dark:text-zinc-100">
       Projects
