--- a/src/components/Avatar.astro
+++ b/src/components/Avatar.astro
@@ -6,6 +6,5 @@ import avatrImage from "@/assets/avatar.jpg";
 <Image
   src={avatrImage}
   alt="Rohid"
-  width={256}
-  class="aspect-square mx-auto object-cover rounded-full"
+  class="mx-auto aspect-square rounded-full object-cover"
 />
