--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,13 +3,13 @@ import { Image } from "astro:assets";
 ---
 
 <header
-  class="max-lg:pb-10 max-lg:border-b border-zinc-100 dark:border-zinc-800"
+  class="border-zinc-100 dark:border-zinc-800 max-lg:border-b max-lg:pb-10"
 >
-  <div class="container xl:max-w-screen-lg mx-auto px-4 h-16 flex items-center">
-    <a href="/" class="text-2xl font-bold mr-12">Rohid</a>
-    <div class="max-lg:absolute max-lg:top-12 max-lg:left-0 max-lg:right-0">
+  <div class="container mx-auto flex h-16 items-center px-4 xl:max-w-screen-lg">
+    <a href="/" class="mr-12 text-2xl font-bold">Rohid</a>
+    <div class="max-lg:absolute max-lg:left-0 max-lg:right-0 max-lg:top-12">
       <nav
-        class="flex gap-6 max-lg:container max-lg:mx-auto max-w-screen-md px-4 h-12 items-center"
+        class="flex h-12 max-w-screen-md items-center gap-6 px-4 max-lg:container max-lg:mx-auto"
       >
         <a href="/posts">Posts</a>
         <a href="/projects">Projects</a>
@@ -17,7 +17,7 @@ import { Image } from "astro:assets";
         <a href="/contact">Contact</a>
       </nav>
     </div>
-    <div class="flex-1 justify-end items-center">
+    <div class="flex-1 items-center justify-end">
       <nav class="flex items-center justify-end gap-6">
         <a
           target="_blank"
@@ -28,7 +28,7 @@ import { Image } from "astro:assets";
           <Image
             src="/icons/twitter.svg"
             alt="Twitter Icon"
-            class="w-5 h-5 dark:invert object-contain"
+            class="h-5 w-5 object-contain dark:invert"
             width={24}
             height={24}
           />
@@ -42,7 +42,7 @@ import { Image } from "astro:assets";
           <Image
             src="/icons/youtube.svg"
             alt="YouTube Icon"
-            class="w-5 h-5 dark:invert object-contain"
+            class="h-5 w-5 object-contain dark:invert"
             width={24}
             height={24}
           />
@@ -56,7 +56,7 @@ import { Image } from "astro:assets";
           <Image
             src="/icons/github.svg"
             alt="Github Icon"
-            class="w-5 h-5 dark:invert object-contain"
+            class="h-5 w-5 object-contain dark:invert"
             width={24}
             height={24}
           />
@@ -70,7 +70,7 @@ import { Image } from "astro:assets";
           <Image
             src="/icons/instagram.svg"
             alt="Instagram Icon"
-            class="w-5 h-5 dark:invert object-contain"
+            class="h-5 w-5 object-contain dark:invert"
             width={24}
             height={24}
           />
