--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -38,7 +38,7 @@ const {
       gtag("config", "G-N165NS4LRX");
     </script>
   </head>
-  <body class="bg-white dark:bg-zinc-900 text-zinc-800 dark:text-zinc-100">
+  <body class="bg-white text-zinc-800 dark:bg-zinc-900 dark:text-zinc-100">
     <Header />
     <slot />
     <Footer />
