--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -24,7 +24,7 @@ const pageTitle = query ? `Search "${query}"` : "Posts";
 
 <RootLayout title={pageTitle}>
   <main
-    class="container lg:max-w-screen-lg mx-auto w-full px-4 lg:py-16 lg:space-y-16 py-8 space-y-8"
+    class="container mx-auto w-full space-y-8 px-4 py-8 lg:max-w-screen-lg lg:space-y-16 lg:py-16"
   >
     <h2 class="text-4xl font-bold text-zinc-600 dark:text-zinc-100">
       {pageTitle}
