--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@
     class="container mx-auto flex items-center justify-between px-4 py-6 text-center lg:max-w-screen-lg"
   >
     <p class="text-sm text-zinc-600 dark:text-zinc-300">
-      Rohidul Islam (<a
+      Rohid (<a
         href="https://twitter.com/rohiddev"
         class="underline-offset-4 hover:text-zinc-950 hover:underline dark:hover:text-zinc-50"
         >@rohiddev</a
