--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,17 +2,19 @@
   <div
     class="container mx-auto flex items-center justify-between px-4 py-6 text-center lg:max-w-screen-lg"
   >
-    <p class="text-sm text-zinc-600 dark:text-zinc-300">
+    <p class="text-zinc-600 dark:text-zinc-300">
       Rohid (<a
         href="https://twitter.com/rohiddev"
+        target="_blank"
         class="underline-offset-4 hover:text-zinc-950 hover:underline dark:hover:text-zinc-50"
         >@rohiddev</a
       >)
     </p>
     <a
       href="https://github.com/iam-rohid/rohid-dev"
-      class="text-sm text-zinc-600 underline-offset-4 hover:text-zinc-950 hover:underline dark:text-zinc-300 dark:hover:text-zinc-50"
-      >Source</a
+      target="_blank"
+      class="text-zinc-600 underline-offset-4 hover:text-zinc-950 hover:underline dark:text-zinc-300 dark:hover:text-zinc-50"
+      >Source Code</a
     >
   </div>
 </footer>
