--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -1,6 +1,7 @@
 ---
 import Footer from "@/components/Footer.astro";
 import Header from "@/components/Header.astro";
+import { ViewTransitions } from "astro:transitions";
 
 type Props = {
   title?: string | undefined;
@@ -25,6 +26,7 @@ const {
     <title>{title}</title>
     <meta name="description" content={description} />
     <meta name="keywords" content={keywords.join(",")} />
+    <ViewTransitions />
     <!-- Tinybird Web Analytics -->
     {
       process.env.NODE_ENV === "production" && (
@@ -45,13 +47,11 @@ const {
       <slot />
     </div>
     <Footer />
-  </body>
-</html>
-
-<style is:global>
-  @media (prefers-color-scheme: dark) {
-    html {
-      color-scheme: dark;
+  </body><style is:global>
+    @media (prefers-color-scheme: dark) {
+      html {
+        color-scheme: dark;
+      }
     }
-  }
-</style>
+  </style>
+</html>
